Fixed header & svg spacing

--- a/style/main.css
+++ b/style/main.css
@@ -85,18 +85,10 @@ svg {
     height: 75px;
     width: 10%;
     height: auto;
+    margin-top: 1.5rem;
+    margin-bottom: 1rem;
 }
 
-#link-out-icon {
-    margin-top: -.6rem;
-    margin-left: .2rem;
-    width: 9% !important;
-    height: auto !important;
-}
-
-#link-out-icon:hover {
-    color:#1a202c;
-}
 
 li > a > svg:hover {
     color: rgb(255,255, 255, .8);
@@ -126,7 +118,8 @@ li > a > svg:hover {
     background-color: #e9e9e9;
     color:#191414;
     transition: .5s;
-    margin: auto;  
+    margin: auto; 
+    margin-bottom: 1rem; 
     padding-left: 45px;
     padding-right: 45px;
     display: block;
@@ -218,7 +211,8 @@ a {
 
 .project > h4 {
     margin: 0;
-    margin-bottom: 2%;
+    margin-top: 1rem;
+    margin-bottom: .5rem;
     font-weight: 530;
 }
 
@@ -415,6 +409,12 @@ li {
     h4 {
         font-size: 5vw;
     }
+
+    svg {
+        margin-top: 0rem;
+        margin-bottom: 0rem;
+    }
+    
 }
 
 @media (max-width: 850px) {
